force-app/main/default/objects/Lead/fields/Accessor_s_Parcel_Number__c.field-meta.xml
<CustomField>
    <fullName>Accessor_s_Parcel_Number__c</fullName>
    <label>Accessor&apos;s Parcel Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>