force-app/main/default/objects/Lead/fields/Account_created_past_24_hours__c.field-meta.xml
<CustomField>
    <fullName>Account_created_past_24_hours__c</fullName>
    <formula>IF ((FLOOR ((NOW() - ($System.OriginDateTime)) * 24) / 24)  - 
(CreatedDate - ($System.OriginDateTime)) &lt; 1, &quot;TRUE&quot;, &quot;FALSE&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account created past 24 hours</label>
    <type>Text</type>
</CustomField>