force-app/main/default/objects/Lead/fields/Acquired_By_Client_Closed_By_BlueWave__c.field-meta.xml
<CustomField>
    <fullName>Acquired_By_Client_Closed_By_BlueWave__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Populated by Client Lead form. Signifies this warm lead will be closed by Perch</inlineHelpText>
    <label>Acquired By Client, Closed By Perch</label>
    <type>Checkbox</type>
</CustomField>