force-app/main/default/objects/Lead/fields/Adverse_Credit_Notice_3__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Credit_Notice_3__c</fullName>
    <formula>TEXT(Personal_Credit_Report__r.Adverse_Credit_Notice_3__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adverse Credit Notice (3)</label>
    <type>Text</type>
</CustomField>