force-app/main/default/objects/Lead/fields/Adverse_Credit_Notice_Code_1__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Credit_Notice_Code_1__c</fullName>
    <formula>Personal_Credit_Report__r.LASERCA__Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adverse Credit Notice - Code 1</label>
    <type>Text</type>
</CustomField>