force-app/main/default/objects/Lead/fields/Agreement_Term_months__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Term_months__c</fullName>
    <description>Agreement Term in Months</description>
    <label>Agreement Term (months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>