force-app/main/default/objects/Lead/fields/Annual_Electricity_Cost__c.field-meta.xml
<CustomField>
    <fullName>Annual_Electricity_Cost__c</fullName>
    <label>Annual Electricity Cost (Utility Data)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>