force-app/main/default/objects/Lead/fields/Annual_Income_Currency__c.field-meta.xml
<CustomField>
    <fullName>Annual_Income_Currency__c</fullName>
    <label>Annual Income</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>