force-app/main/default/objects/Lead/fields/Annual_kWh_Utility_Data__c.field-meta.xml
<CustomField>
    <fullName>Annual_kWh_Utility_Data__c</fullName>
    <label>Annual kWh (Utility Data)</label>
    <precision>16</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>