force-app/main/default/objects/Lead/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date that the lead was created, used to map the Lead&apos;s Created Date to the Opportunity (since we can&apos;t use CreatedDate in lead mapping)</inlineHelpText>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>