force-app/main/default/objects/Lead/fields/Application_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Complete_Date__c</fullName>
    <description>Date Flow application is completed.</description>
    <inlineHelpText>Date Flow application is completed.</inlineHelpText>
    <label>Application Complete Date</label>
    <type>DateTime</type>
</CustomField>