force-app/main/default/objects/Lead/fields/Application_Source_Phase_1__c.field-meta.xml
<CustomField>
    <fullName>Application_Source_Phase_1__c</fullName>
    <description>This shows the phase I source in which this customer&apos;s application was processed.</description>
    <inlineHelpText>This shows the phase I source in which this customer&apos;s application was processed.</inlineHelpText>
    <label>Application Source (Phase 1)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>