force-app/main/default/objects/Lead/fields/Application_Source_Phase_2__c.field-meta.xml
<CustomField>
    <fullName>Application_Source_Phase_2__c</fullName>
    <description>This shows the phase 2 source in which this customer&apos;s application was processed.</description>
    <inlineHelpText>This shows the phase 2 source in which this customer&apos;s application was processed.</inlineHelpText>
    <label>Application Source (Phase 2)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>