force-app/main/default/objects/Lead/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <inlineHelpText>Where the potential customer is in the application process</inlineHelpText>
    <label>Internal Application Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Started</fullName>
                
                    <default>true</default>
                
                    <label>Started</label>
                
                </value>
            
                <value>
                
                    <fullName>Customer Info Completed</fullName>
                
                
                    <label>Customer Info Completed</label>
                
                </value>
            
                <value>
                
                    <fullName>Contracts Signed</fullName>
                
                
                    <label>Contracts Signed</label>
                
                </value>
            
                <value>
                
                    <fullName>Application Completed</fullName>
                
                
                    <label>Application Completed</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>