force-app/main/default/objects/Lead/fields/Auto_QC_Error_Debug__c.field-meta.xml
<CustomField>
    <fullName>Auto_QC_Error_Debug__c</fullName>
    <description>Debugging information for Auto Lead Qualification &amp; Conversion process</description>
    <inlineHelpText>Debugging information, if relevant, for Auto Lead Qualification &amp; Conversion process</inlineHelpText>
    <label>Auto QC Error Debug</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>