force-app/main/default/objects/Lead/fields/Auto_QC_Failure_Details__c.field-meta.xml
<CustomField>
    <fullName>Auto_QC_Failure_Details__c</fullName>
    <description>Failures encountered during Auto Lead Qualification &amp; Conversion when more than one is encountered. See CSLeadsConverter / CSLeadConversionValidator.</description>
    <inlineHelpText>Failures encountered during Auto Lead Qualification &amp; Conversion when more than one is encountered</inlineHelpText>
    <label>Auto QC Failure Details</label>
    <type>TextArea</type>
</CustomField>