force-app/main/default/objects/Lead/fields/Auto_QC_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Auto_QC_Failure_Reason__c</fullName>
    <description>Failure encountered during Auto Lead Qualification &amp; Conversion. See CSLeadsConverter / CSLeadConversionValidator.</description>
    <inlineHelpText>Failure encountered during Auto Lead Qualification &amp; Conversion</inlineHelpText>
    <label>Auto QC Failure Reason</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Conversion Failure</fullName>
                
                
                    <label>Conversion Failure</label>
                
                </value>
            
                <value>
                
                    <fullName>Lead Already Converted</fullName>
                
                
                    <label>Lead Already Converted</label>
                
                </value>
            
                <value>
                
                    <fullName>Testcase Lead</fullName>
                
                
                    <label>Testcase Lead</label>
                
                </value>
            
                <value>
                
                    <fullName>Application Incomplete</fullName>
                
                
                    <label>Application Incomplete</label>
                
                </value>
            
                <value>
                
                    <fullName>Invalid Email</fullName>
                
                
                    <label>Invalid Email</label>
                
                </value>
            
                <value>
                
                    <fullName>Incomplete UALs</fullName>
                
                
                    <label>Incomplete UALs</label>
                
                </value>
            
                <value>
                
                    <fullName>No Qualified Systems Found</fullName>
                
                
                    <label>No Qualified Systems Found</label>
                
                </value>
            
                <value>
                
                    <fullName>System Product Mismatch</fullName>
                
                
                    <label>System Product Mismatch</label>
                
                </value>
            
                <value>
                
                    <fullName>Auto QC Turned Off</fullName>
                
                
                    <label>Auto QC Turned Off</label>
                
                </value>
            
                <value>
                
                    <fullName>Multiple Issues</fullName>
                
                
                    <label>Multiple Issues</label>
                
                </value>
            
                <value>
                
                    <fullName>No Demand Capacity Available</fullName>
                
                
                    <label>No Demand Capacity Available</label>
                
                </value>
            
                <value>
                
                    <fullName>Unresolved Split Load Zone</fullName>
                
                
                    <label>Unresolved Split Load Zone</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>