force-app/main/default/objects/Lead/fields/Auto_QC_Last_Runtime__c.field-meta.xml
<CustomField>
    <fullName>Auto_QC_Last_Runtime__c</fullName>
    <description>Last runtime of Auto Qualification &amp; Conversion process</description>
    <inlineHelpText>Last runtime of Auto Qualification &amp; Conversion process</inlineHelpText>
    <label>Auto QC Last Runtime</label>
    <type>DateTime</type>
</CustomField>