force-app/main/default/objects/Lead/fields/Automatic_Product_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Product_Assignment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Automatic Product Assignment</label>
    <type>Checkbox</type>
</CustomField>