force-app/main/default/objects/Lead/fields/Available_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Available_Capacity__c</fullName>
    <inlineHelpText>Total Capacity Available in this Customer&apos;s Load Zone/Utility Combination.</inlineHelpText>
    <label>XXAvailable Capacity</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>