force-app/main/default/objects/Lead/fields/Avidia_Checking_Account__c.field-meta.xml
<CustomField>
    <fullName>Avidia_Checking_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Avidia Checking Account</label>
    <type>Checkbox</type>
</CustomField>