force-app/main/default/objects/Lead/fields/Avidia_Executive__c.field-meta.xml
<CustomField>
    <fullName>Avidia_Executive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is borrower or co-borrower an executive officer or director of Avidia Bank?</description>
    <inlineHelpText>Reg O question: Is borrower or co-borrower an executive officer or director of Avidia Bank?</inlineHelpText>
    <label>Avidia Executive?</label>
    <type>Checkbox</type>
</CustomField>