force-app/main/default/objects/Lead/fields/Avidia_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Avidia_Service_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is borrower or co-borrower a service provider of Avidia Bank?</description>
    <inlineHelpText>Reg O question. Is borrower or co-borrower a service provider of Avidia Bank?</inlineHelpText>
    <label>Avidia Service Provider?</label>
    <type>Checkbox</type>
</CustomField>