force-app/main/default/objects/Lead/fields/bs_Sales_ID__c.field-meta.xml
<CustomField>
    <fullName>bs_Sales_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Person</label>
    <referenceTo>BSST__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>