force-app/main/default/objects/Lead/fields/Business_Title__c.field-meta.xml
<CustomField>
    <fullName>Business_Title__c</fullName>
    <label>Business Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>