force-app/main/default/objects/Lead/fields/CAP_Stage__c.field-meta.xml
<CustomField>
    <fullName>CAP_Stage__c</fullName>
    <inlineHelpText>Last completed stage in the Customer Application Portal</inlineHelpText>
    <label>CAP Stage</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>CAP_Stages</valueSetName>
        
        </valueSet>
</CustomField>