force-app/main/default/objects/Lead/fields/Capacity_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Allocation__c</fullName>
    <description>How much capacity will be allocated to this account on schedule Z</description>
    <label>Capacity Allocation in kW</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>