force-app/main/default/objects/Lead/fields/Capacity_Available__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Available__c</fullName>
    <description>Is there available capacity for CS subscription?</description>
    <label>Capacity Available?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Waitlist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>