force-app/main/default/objects/Lead/fields/ClickToDial__Click_to_Call_Phone__c.field-meta.xml
<CustomField>
    <fullName>ClickToDial__Click_to_Call_Phone__c</fullName>
    <description>You must dial + then the country code and number you wish to call. Example: +12125551313.
Specify the global country code setting or record level country code to automatically add &quot;+country code&quot; to your Click-to-Call links. GoTo App Setup| Customize| Develop| Custom Settings| Click-to-Call Configuration Manager.</description>
    <formula>IF(Phone != null, HYPERLINK(&quot;skype:&quot;+IF( ClickToDial__Country_Code__c != null,ClickToDial__Country_Code__c, $Setup.ClickToDial__ConfigurationManager__c.ClickToDial__Global_Country_Code__c ) &amp;  SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &apos;-&apos;, &apos;&apos;),&apos; &apos; ,&apos;&apos;),&apos;)&apos;,&apos;&apos;),&apos;(&apos;,&apos;&apos;),&apos;.&apos;,&apos;&apos;),&apos;,&apos;,&apos;&apos;) +&quot;?call&quot;, IF( ClickToDial__Country_Code__c != null,ClickToDial__Country_Code__c, $Setup.ClickToDial__ConfigurationManager__c.ClickToDial__Global_Country_Code__c ) &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &apos;-&apos;, &apos;&apos;),&apos; &apos; ,&apos;&apos;),&apos;)&apos;,&apos;&apos;),&apos;(&apos;,&apos;&apos;),&apos;.&apos;,&apos;&apos;),&apos;,&apos;,&apos;&apos;) , &quot;_self\&quot; onclick=\&quot;createTask(&apos;&quot;+ Phone +&quot;&apos;, &apos;&quot;+ Id +&quot;&apos;,&apos;&quot;+ $Api.Session_ID +&quot;&apos;,true,&apos;&quot;+ $User.Id  +&quot;&apos;,&apos;&quot;+$Setup.ClickToDial__ConfigurationManager__c.ClickToDial__EnableAutoCallLog__c+&quot;&apos;);\&quot; &quot;),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>You must dial + then the country code and number you wish to call. Example: +12125551313.
Specify the global country code setting or record level country code to automatically add &quot;+country code&quot; to your Click-to-Call links.</inlineHelpText>
    <label>Click-to-Call Phone</label>
    <type>Text</type>
</CustomField>