force-app/main/default/objects/Lead/fields/ClickToDial__Click_to_Call_Skype__c.field-meta.xml
<CustomField>
    <fullName>ClickToDial__Click_to_Call_Skype__c</fullName>
    <formula>IF( LEN(ClickToDial__Skype_Username__c) &gt; 0, HYPERLINK(&quot;skype:&quot; &amp; ClickToDial__Skype_Username__c &amp; &quot;?call&quot;, ClickToDial__Skype_Username__c, &quot;_self\&quot; onclick=\&quot;createTask(&apos;&quot;+ ClickToDial__Skype_Username__c +&quot;&apos;, &apos;&quot;+ Id +&quot;&apos;,&apos;&quot;+ $Api.Session_ID +&quot;&apos;,false,&apos;&quot;+ $User.Id  +&quot;&apos;,  &apos;&quot;+$Setup.ClickToDial__ConfigurationManager__c.ClickToDial__EnableAutoCallLog__c+&quot;&apos; );\&quot; &quot;), &quot;No Skype ID&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Click-to-Call Skype</label>
    <type>Text</type>
</CustomField>