force-app/main/default/objects/Lead/fields/CoApplicant_Contact__c.field-meta.xml
<CustomField>
    <fullName>CoApplicant_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CoApplicant Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (CoApplicant Contact)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>