force-app/main/default/objects/Lead/fields/Community_Solar__c.field-meta.xml
<CustomField>
    <fullName>Community_Solar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to indicate CS lead</description>
    <label>Community Solar?</label>
    <type>Checkbox</type>
</CustomField>