force-app/main/default/objects/Lead/fields/Community_Solar_apt_suite__c.field-meta.xml
<CustomField>
    <fullName>Community_Solar_apt_suite__c</fullName>
    <label>Service Apt/Suite</label>
    <length>15</length>
    <type>Text</type>
</CustomField>