force-app/main/default/objects/Lead/fields/Community_Solar_Interest__c.field-meta.xml
<CustomField>
    <fullName>Community_Solar_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Community Solar Interest</label>
    <type>Checkbox</type>
</CustomField>