force-app/main/default/objects/Lead/fields/Community_Solar_Lead__c.field-meta.xml
<CustomField>
    <fullName>Community_Solar_Lead__c</fullName>
    <formula>IF(ISBLANK(  LASERCA__Social_Security_Number__c  )  , FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community Solar Lead?</label>
    <type>Checkbox</type>
</CustomField>