force-app/main/default/objects/Lead/fields/Community_Solar_Redirect__c.field-meta.xml
<CustomField>
    <fullName>Community_Solar_Redirect__c</fullName>
    <label>Community Solar Redirect</label>
    <length>5</length>
    <type>Text</type>
</CustomField>