force-app/main/default/objects/Lead/fields/Community_Solar_street_Address__c.field-meta.xml
<CustomField>
    <fullName>Community_Solar_street_Address__c</fullName>
    <label>Service Street Address</label>
    <length>30</length>
    <type>Text</type>
</CustomField>