force-app/main/default/objects/Lead/fields/Community_Solar_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Community_Solar_Zip_Code__c</fullName>
    <formula>Parcel_Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Zip Code</label>
    <type>Text</type>
</CustomField>