force-app/main/default/objects/Lead/fields/Comunity_solar_city__c.field-meta.xml
<CustomField>
    <fullName>Comunity_solar_city__c</fullName>
    <label>Service City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>