force-app/main/default/objects/Lead/fields/Concatenated_Address__c.field-meta.xml
<CustomField>
    <fullName>Concatenated_Address__c</fullName>
    <formula>City&amp;&quot;, &quot;&amp;State&amp;&quot; &quot;&amp;PostalCode</formula>
    <label>Concatenated Address</label>
    <type>Text</type>
</CustomField>