force-app/main/default/objects/Lead/fields/Confirm_Utility__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Utility__c</fullName>
    <inlineHelpText>Text Field used in CSAP backend only. If in a split utility territory, this field will be populated with both utilities until resolved</inlineHelpText>
    <label>Confirm Utility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>