force-app/main/default/objects/Lead/fields/Conga_Contract__c.field-meta.xml
<CustomField>
    <fullName>Conga_Contract__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=&quot; + Product__r.Conga_Template_Id_s__c +
&quot;&amp;queryid=[UAL]a270a0000022F3EAAU,[Biz]a270a0000022F3FAAU,[BizSig]a270a0000022F3HAAU,[CustSig]a270a0000022F3GAAU&quot; + 
&quot;&amp;sc0=1&quot; + 
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;APDF=0&quot; +
&quot;&amp;contentnetworkid=0DB0a000000L0ryGAC&quot; + 
&quot;&amp;contentsharetype=V&quot; + 
&quot;&amp;contentvisibility=AllUsers&quot; +
&quot;&amp;defaultpdf=1&quot; +
IF(ISBLANK(Customer_Signed_Date__c),&quot;&amp;qmode=SalesforceFile&quot;,
&quot;&amp;EmailTemplateId=00X0a000000j4jB&quot; + 
&quot;&amp;EmailToId=&quot; +  Id +
&quot;&amp;EmailFromid=&quot;+IF(ISPICKVAL($CustomMetadata.System_Default__mdt.System_Defaults.Default_Client_Brand_Key__c,&quot;BluewaveLogo&quot;),&quot;0D20a0000004K0P&quot;,&quot;0D25b000000L6gKCAS&quot;) +
&quot;&amp;qmode=SendEmail&quot;
)</formula>
    <label>Conga Contract</label>
    <type>Text</type>
</CustomField>