force-app/main/default/objects/Lead/fields/Construction_Period_DOER__c.field-meta.xml
<CustomField>
    <fullName>Construction_Period_DOER__c</fullName>
    <label>Construction Period (DOER)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>