force-app/main/default/objects/Lead/fields/Contacted__c.field-meta.xml
<CustomField>
    <fullName>Contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contacted</label>
    <type>Checkbox</type>
</CustomField>