force-app/main/default/objects/Lead/fields/Contingent_Contract__c.field-meta.xml
<CustomField>
    <fullName>Contingent_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks whether the application is contingent or not from SLPApplication</description>
    <label>Contingent Contract</label>
    <type>Checkbox</type>
</CustomField>