force-app/main/default/objects/Lead/fields/Continue_Application_Link__c.field-meta.xml
<CustomField>
    <fullName>Continue_Application_Link__c</fullName>
    <description>A generic URL field that can be set by a UI to provide a link specific to this lead</description>
    <inlineHelpText>Stores URL to visit an application as this lead</inlineHelpText>
    <label>Continue Application Link</label>
    <type>Url</type>
</CustomField>