force-app/main/default/objects/Lead/fields/Contract_eSign_Link__c.field-meta.xml
<CustomField>
    <fullName>Contract_eSign_Link__c</fullName>
    <description>Link that points to the loc=agree page for SSF, if Contract Re-Signs are ever necessary for a customer.</description>
    <inlineHelpText>Link that points to the loc=agree page for SSF, if Contract Re-Signs are ever necessary for a customer.</inlineHelpText>
    <label>Contract eSign Link</label>
    <type>Url</type>
</CustomField>