force-app/main/default/objects/Lead/fields/Credit_Check_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Check Acknowledged</label>
    <type>Checkbox</type>
</CustomField>