force-app/main/default/objects/Lead/fields/Credit_Partner_Alert__c.field-meta.xml
<CustomField>
    <fullName>Credit_Partner_Alert__c</fullName>
    <description>Alerts with text if a pre-approval credit check is denied</description>
    <label>Credit - Partner Alert</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>