force-app/main/default/objects/Lead/fields/Credit_Provider__c.field-meta.xml
<CustomField>
    <fullName>Credit_Provider__c</fullName>
    <description>Used in merge fields on the credit denied email</description>
    <formula>IF(
     Personal_Credit_Report__r.LASERCA__Experian_Indicator__c,&quot;Experian&quot;,
IF(
Personal_Credit_Report__r.LASERCA__TransUnion_Indicator__c, &quot;TransUnion&quot;,&quot;Error&quot;
)
)</formula>
    <label>Credit Provider</label>
    <type>Text</type>
</CustomField>