force-app/main/default/objects/Lead/fields/Credit_Provider_Address__c.field-meta.xml
<CustomField>
    <fullName>Credit_Provider_Address__c</fullName>
    <description>Used in merge fields for credit denied email</description>
    <formula>IF(
Personal_Credit_Report__r.LASERCA__Experian_Indicator__c,&quot;1 (800) 916-8800. P.O. Box 4500, Allen, TX 75013&quot;,
IF(
Personal_Credit_Report__r.LASERCA__TransUnion_Indicator__c , &quot;(877)-322-8228. TransUnion is located at 555 West Adams St., Chicago IL&quot;,&quot;Error&quot;
)
)</formula>
    <label>Credit Provider Address</label>
    <type>Text</type>
</CustomField>