force-app/main/default/objects/Lead/fields/Credit_Report_Detail_3__c.field-meta.xml
<CustomField>
    <fullName>Credit_Report_Detail_3__c</fullName>
    <formula>Personal_Credit_Report__r.LASERCA__Code_3__c &amp; &quot; - &quot; &amp; Personal_Credit_Report__r.LASERCA__Detail_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Report Detail 3</label>
    <type>Text</type>
</CustomField>